# OpenHMDDemo

./: CMakeLists.txt  DotSceneLoader.cpp  DotSceneLoader.h  OpenHMD.cpp  OpenHMD.h  README.md  compile.sh  main.cpp  main.h  plugins.cfg  resources.cfg
LocalDeps/: OgreEuler.h  OgreHelpers.h
cmake/: FindOGRE.cmake  FindOIS.cmake  FindOpenHMD.cmake
resources/: HMD.compositor  HMDGenericAutoScaling.frag.glsl  HMDGenericAutoScaling.material  Oculus.compositor  Oculus.frag.glsl  Oculus.material  Oculus1080.frag.glsl  OculusDK1.material  OculusDK2.material  OpenHMD.mesh  OpenHMD.mesh.xml  TestChamber.mesh.xml  TestChamber.scene  TestMaterial.material  TestMaterial.material~
resources/PhysicsWarehouse/: Beams.material  Cube.001.mesh  Cube.001.mesh.xml  Cube.004.mesh  Cube.004.mesh.xml  Floor.material  Material.material  PhysicsWarehouse.scene  Suzanne.mesh  Suzanne.mesh.xml  Wall.material
resources/TestChamber/: TestChamber.mesh  TestChamber.scene  TestMaterial.material
